--- a/resources/sass/pages/_yourRights.scss
+++ b/resources/sass/pages/_yourRights.scss
@@ -28,28 +28,30 @@
 }
 
 
-.your-rights-img-top {
-    position: absolute;
-    z-index: 999;
-    background: url(/images/your-rights-2.jpg);
-    background-size: cover;
-    height: 470px;
-    width: 410px;
-    border-radius: 5px;
-    right: -230px;
-    top: 58px;
-}
+@include media-breakpoint-down(md) {
+    .your-rights-img-top {
+        position: absolute;
+        z-index: 999;
+        background: url(/images/about-hero-top.jpg);
+        background-size: cover;
+        height: 240px;
+        width: 240px;
+        border-radius: 5px;
+        right: 30px;
+        top: 58px;
+    }
 
-.your-rights-img-bottom {
-    position: absolute;
-    z-index: 998;
-    background: url(/images/your-rights-1.jpg);
-    background-size: cover;
-    height: 380px;
-    width: 380px;
-    border-radius: 5px;
-    bottom: 55px;
-    left: 180px;
+    .your-rights-img-bottom {
+        position: absolute;
+        z-index: 998;
+        background: url(/images/about-hero-bottom.jpg);
+        background-size: cover;
+        height: 230px;
+        width: 240px;
+        border-radius: 5px;
+        bottom: 0;
+        left: 40px;
+    }
 }
 
 .your-rights-img-back {
