--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -30,6 +30,7 @@ $brand-primary-4: #18435a; // navy ish blue
 $brand-primary-5: #037098; // lilac
 $brand-primary-6: #de026d; // hot pink
 $brand-primary-7: #0d69f2; // original blue
+$blue: $brand-primary-7;   // to override BS default blue
 
 // Secondary colours
 $brand-secondary-1: #00cfcc; // cyan
