--- a/resources/sass/pages/pagesections/_corporateContent.scss
+++ b/resources/sass/pages/pagesections/_corporateContent.scss
@@ -9,7 +9,7 @@
 
     .corporate-content-inner {
         background-color: #fff;
-        padding: 1rem;
+        padding: 1rem 0;
 
         @include media-breakpoint-up(lg) {
             padding: 30px;
