--- a/resources/sass/components/basic/_button.scss
+++ b/resources/sass/components/basic/_button.scss
@@ -532,14 +532,12 @@
 
 .btn-enquire,
 .btn-enquire-private-hospital {
-    //border-radius: $border-radius;
     color: $white !important;
     @include font-size(14);
     position: relative;
-    padding: 8px 5px 8px 40px;
+    padding: 8px 15px 8px 60px !important;
     display: inline-block;
     text-align: left;
-    //background-color: $brand-secondary-3;
 
     &:hover {
         background-color: $brand-primary-7;
@@ -550,52 +548,5 @@
         left: 8px;
         width: 20px;
         height: 20px;
-    }
-}
-
-.btn-enquire-private-hospital {
-    @include font-size(16);
-    border-radius: $border-radius;
-    text-align: center;
-    padding: 15px 25px 15px 45px;
-
-    svg {
-        @include v-c;
-        left: 8px;
-        width: 30px;
-        height: 25px;
-    }
-}
-
-.btn-enquire-pink {
-    border-radius: 20px;
-    background: $white;
-    color: $pink;
-    @include font-size(12);
-    position: relative;
-    padding: 10px 10px 10px 35px;
-    display: inline-block;
-    text-align: left;
-    width: 131px;
-
-    &:before {
-        content: '';
-        background-image: url('../images/icons/circle-check-pink.svg');
-        @include icon-bg-center(100%);
-        @include v-c;
-        left: 10px;
-        width: 20px;
-        height: 20px;
-    }
-
-    &:hover {
-        color: $white;
-        background-color: $pink;
-        text-decoration: none;
-
-        &:before {
-            background-image: url('../images/icons/circle-check.svg');
-
-        }
     }
 }
