Desktop results page responsive amends

--- a/resources/sass/components/_modal.scss
+++ b/resources/sass/components/_modal.scss
@@ -104,12 +104,12 @@
         }
     }
 
-    &#hc_modal_contacts_general {
-        .btn-enquire {
-            line-height: 40px;
-            max-width: inherit;
-        }
-    }
+    //&#hc_modal_contacts_general {
+    //    .btn-enquire {
+    //        line-height: 40px;
+    //        max-width: inherit;
+    //    }
+    //}
 
     // Take the tour modal
 
