--- a/resources/sass/pages/_resultsPage.scss
+++ b/resources/sass/pages/_resultsPage.scss
@@ -486,11 +486,15 @@
     }
 
     .sort-item-location {
-        color: $brand-tertiary-1;
+        color: $brand-tertiary-2;
         font-size: 14px;
         font-weight: 400;
         line-height: 1.3;
         margin-bottom: 2px;
+
+        @include media-breakpoint-down(md){
+            text-align: center;
+        }
     }
 
     .find-link {
