Minor fix enquiry buttons.

--- a/resources/sass/components/basic/_button.scss
+++ b/resources/sass/components/basic/_button.scss
@@ -553,6 +553,7 @@
             transform: none !important;
             width: 20px;
             height: 20px;
+            flex: 0 0 20px;
             margin-right: 0.25rem;
             margin-left: 0;
         }
