optimised your rights images

--- a/resources/sass/pages/_yourRights.scss
+++ b/resources/sass/pages/_yourRights.scss
@@ -13,7 +13,7 @@
 .your-rights-hero-cont {
     position: absolute;
     top: -45px;
-    right: 0;
+    right: 0;cd
     transform: translate(0%);
     bottom: -45px;
 }
