--- a/resources/sass/_global.scss
+++ b/resources/sass/_global.scss
@@ -1098,6 +1098,6 @@ h6 {
 }
 
 // Force accordions open for content editing purposes
-.collapse {
-    display: block !important;
-}
+//.collapse {
+//    display: block !important;
+//}
