Tweak to highlight function on FAQs

--- a/resources/sass/pages/_faqsPage.scss
+++ b/resources/sass/pages/_faqsPage.scss
@@ -2,6 +2,7 @@
     .hl { // The highlighted span for search terms in results
         @extend .bg-turq;
         @extend .text-white;
+        display: inline;
     }
 
     .input-wrapper {
