Add basic honeypot field to enquiry form. Mobile and desktop now both using same form.

--- a/resources/sass/components/_form.scss
+++ b/resources/sass/components/_form.scss
@@ -263,3 +263,10 @@ textarea {
 .faq-search-input {
 
 }
+
+// Hide the honeypot field
+.hidden-with-pos {
+    position: fixed;
+    top: -500px;
+    left: -500px;
+}
