Complete rework of yourrightspage.blade.php

--- a/resources/sass/pages/_yourRights.scss
+++ b/resources/sass/pages/_yourRights.scss
@@ -5,10 +5,10 @@
 //    }
 //}
 
-
-.your-rights-intro {
-    border-bottom: $greyBorder;
-}
+//
+//.your-rights-intro {
+//    border-bottom: $greyBorder;
+//}
 
 .your-rights-hero-cont {
     position: absolute;
