--- a/resources/sass/_global.scss
+++ b/resources/sass/_global.scss
@@ -239,10 +239,12 @@ ul.blue-dot {
     &.blue-dot_small {
 
         li {
-            color: $black;
+            //color: $black;
             margin-bottom: 5px;
+            padding-left: 15px;
 
             &:before {
+                top: 10px;
                 width: 5px;
                 height: 5px;
                 background-color: $brand-primary-1;
