Start editing privacy policy as per 25th Feb comments

--- a/resources/sass/_global.scss
+++ b/resources/sass/_global.scss
@@ -1100,6 +1100,6 @@ h6 {
 }
 
 // Force accordions open for content editing purposes
-//.collapse {
-//    display: block !important;
-//}
+.collapse {
+    display: block !important;
+}
