--- a/resources/sass/components/_solutions.scss
+++ b/resources/sass/components/_solutions.scss
@@ -132,6 +132,7 @@
             }
 
             .col {
+                min-width: 170px;
                 &:last-child {
                     @extend .border-right-0;
 
