Clear browser bugs

--- a/resources/sass/components/_solutions.scss
+++ b/resources/sass/components/_solutions.scss
@@ -170,7 +170,7 @@
 
             .details {
                 height: 36px;
-                overflow: hidden;
+                //overflow: hidden;
                 display: flex;
                 flex-direction: column;
                 align-items: center;
