--- a/resources/sass/pages/_yourRights.scss
+++ b/resources/sass/pages/_yourRights.scss
@@ -22,9 +22,9 @@
 .your-rights-img-top {
     position: absolute;
     z-index: 999;
-    background: url(../images/your-rights-img-top.jpg);
+    background: url(../images/your-rights-hero-1.jpg);
     background-size: cover;
-    background-position: right 0 !important;
+    background-position: center center;
     height: 470px;
     width: 410px;
     border-radius: 5px;
@@ -35,12 +35,13 @@
 .your-rights-img-bottom {
     position: absolute;
     z-index: 998;
-    background: url(../images/your-rights-img-bottom.jpg);
+    background: url(../images/your-rights-hero-2.jpg);
     background-size: cover;
+    background-position: center center;
     height: 380px;
     width: 380px;
     border-radius: 5px;
-    bottom: 55px;
+    bottom: 155px;
     left: 180px;
 }
 
@@ -69,18 +70,19 @@
     z-index: 996;
     left: 510px;
     width: 115px;
-    bottom: -10px;
+    bottom: 40px;
 }
 
 .your-rights-pattern-bottom {
     position: absolute;
     z-index: 995;
-    bottom: 0;
+    bottom: 100px;
     height: 85px;
     left: 140px;
 }
 
-@media screen and (max-width:1200px) {
+
+@media screen and (max-width: 1200px) {
     .your-rights-hero-cont {
         position: absolute;
         transform: translate(20%, 0);
@@ -93,10 +95,6 @@
     }
 
     .your-rights-img-top {
-        position: absolute;
-        z-index: 999;
-        background: url(../images/your-rights-img-top.jpg);
-        background-size: cover;
         height: 370px;
         width: 370px;
         border-radius: 5px;
@@ -105,22 +103,14 @@
     }
 
     .your-rights-img-bottom {
-        position: absolute;
-        z-index: 998;
-        background: url(../images/your-rights-img-bottom.jpg);
-        background-size: cover;
         height: 330px;
         width: 350px;
         border-radius: 5px;
-        bottom: 285px;
+        bottom: 345px;
         left: 70px;
     }
 
     .your-rights-img-back {
-        position: absolute;
-        z-index: 997;
-        background: url(../images/your-rights-img-back.jpg);
-        background-size: cover;
         height: 200px;
         width: 200px;
         border-radius: 5px;
@@ -141,19 +131,19 @@
         z-index: 996;
         left: 400px;
         width: 115px;
-        bottom: 180px;
+        bottom: 270px;
     }
 
     .your-rights-pattern-bottom {
         position: absolute;
         z-index: 995;
-        bottom: 250px;
+        bottom: 290px;
         height: 85px;
         left: 10px;
     }
 }
 
-@media screen and (max-width:991px) {
+@media screen and (max-width: 991px) {
     .your-rights-hero-cont {
         position: relative;
         top: 0;
@@ -167,10 +157,6 @@
     }
 
     .your-rights-img-top {
-        position: absolute;
-        z-index: 999;
-        background: url(../images/your-rights-img-top.jpg);
-        background-size: cover;
         height: 370px;
         width: 370px;
         border-radius: 5px;
@@ -179,10 +165,6 @@
     }
 
     .your-rights-img-bottom {
-        position: absolute;
-        z-index: 998;
-        background: url(../images/your-rights-img-bottom.jpg);
-        background-size: cover;
         height: 290px;
         width: 300px;
         border-radius: 5px;
@@ -206,7 +188,7 @@
 
 }
 
-@media screen and (max-width:576px) {
+@media screen and (max-width: 576px) {
     .your-rights-hero-cont {
         position: relative;
         top: 0;
@@ -217,10 +199,6 @@
     }
 
     .your-rights-img-top {
-        position: absolute;
-        z-index: 999;
-        background: url(../images/your-rights-img-top.jpg);
-        background-size: cover;
         height: 270px;
         width: 270px;
         border-radius: 5px;
@@ -229,4 +207,21 @@
     }
 }
 
+// Images at the bottom of the page
+.your-rights-img-cont {
+    .your-rights-img-top {
+        background: url(../images/your-rights-img-top.jpg);
+        background-position: right;
+        background-size: cover;
+    }
 
+    .your-rights-img-bottom {
+        background: url(../images/your-rights-img-bottom.jpg);
+        background-size: cover;
+    }
+
+    .your-rights-img-back {
+        background: url(../images/your-rights-img-back.jpg);
+        background-size: cover;
+    }
+}
