--- a/resources/sass/pages/_yourRights.scss
+++ b/resources/sass/pages/_yourRights.scss
@@ -10,7 +10,8 @@
 //    border-bottom: $greyBorder;
 //}
 
-.your-rights-hero-cont {
+.your-rights-hero-cont,
+.your-rights-img-cont {
     position: absolute;
     top: -45px;
     right: 0;
@@ -83,7 +84,8 @@
 
 
 @media screen and (max-width: 1200px) {
-    .your-rights-hero-cont {
+    .your-rights-hero-cont,
+    .your-rights-img-cont {
         position: absolute;
         transform: translate(20%, 0);
         width: 60% !important;
@@ -144,7 +146,7 @@
 }
 
 @media screen and (max-width: 991px) {
-    .your-rights-hero-cont {
+    .your-rights-hero-cont, .your-rights-img-cont {
         position: relative;
         top: 0;
         right: 0;
@@ -189,7 +191,8 @@
 }
 
 @media screen and (max-width: 576px) {
-    .your-rights-hero-cont {
+    .your-rights-hero-cont,
+    .your-rights-img-cont {
         position: relative;
         top: 0;
         right: 0;
