--- a/resources/sass/pages/_resultsPage.scss
+++ b/resources/sass/pages/_resultsPage.scss
@@ -605,3 +605,12 @@
     //    border-radius: 3px 3px 0 0;
     //}
 }
+
+// Bootstrap select dropdowns
+.dropdown-item:active,
+.dropdown-item.active {
+    &:hover,
+    &:focus {
+        color: #fff !important
+    }
+}
