--- a/resources/sass/components/basic/_button.scss
+++ b/resources/sass/components/basic/_button.scss
@@ -144,7 +144,7 @@
             }
         }
 
-        @include media-breakpoint-up(lg){
+        @include media-breakpoint-up(xl){
             &:hover {
                 background-color: $brand-primary-7;
                 color: #fff;
