--- a/resources/sass/_global.scss
+++ b/resources/sass/_global.scss
@@ -684,6 +684,10 @@ path {
     }
 }
 
+.blue-tick {
+    max-width: 60px;
+}
+
 // Signature font
 .signature {
     font-family: "Brown Pen", cursive;
