--- a/resources/sass/pages/_resultsPage.scss
+++ b/resources/sass/pages/_resultsPage.scss
@@ -402,6 +402,7 @@
 
                 svg {
                     width: 15px;
+                    cursor: pointer;
                 }
             }
 
