Bug fix - https://trello.com/c/6y89Yg5F/47-hospital-type-pill-and-map-button-jump-on-hover-over

--- a/resources/sass/components/basic/_button.scss
+++ b/resources/sass/components/basic/_button.scss
@@ -364,12 +364,10 @@
 }
 
 .btn-more-info {
-    color: $brand-primary-1;
-
-    &:hover {
-        color: $brand-primary-7;
-        opacity: 1;
-    }
+    color: $brand-primary-1 !important;
+    //&:hover {
+    //    color: $brand-primary-7;
+    //}
 }
 
 // Back to top button
