Bug fix - https://trello.com/c/ZwI20aOK/55-page-heading-should-be-left-aligned

--- a/resources/sass/layout/_blog.scss
+++ b/resources/sass/layout/_blog.scss
@@ -1,9 +1,11 @@
 // ========================BLOGS SECTION================================
 .blog-page {
     .banner {
-        min-height: 338px;
+        @include media-breakpoint-up(xl){
+            padding: 100px 0;
+        }
         display: flex;
-        justify-content: center;
+        justify-content: flex-start;
         align-items: center;
     }
 
