--- a/resources/sass/_global.scss
+++ b/resources/sass/_global.scss
@@ -1097,21 +1097,21 @@ h6 {
     padding: 0 !important;
 }
 
-.results-page-desktop .nhs-hospital p:after {
-    border-bottom: solid 15px transparent;
-    border-right: solid 15px transparent;
-    border-left: solid 15px $nhsBlue;
-    border-top: solid 15px $nhsBlue;
-    content: ''
-}
-
-.results-page-desktop .private-hospital p:after {
-    border-bottom: solid 15px transparent;
-    border-right: solid 15px transparent;
-    border-left: solid 15px $privateBlue;
-    border-top: solid 15px $privateBlue;
-    content: ''
-}
+//.results-page-desktop .nhs-hospital p:after {
+//    border-bottom: solid 15px transparent;
+//    border-right: solid 15px transparent;
+//    border-left: solid 15px $nhsBlue;
+//    border-top: solid 15px $nhsBlue;
+//    content: ''
+//}
+//
+//.results-page-desktop .private-hospital p:after {
+//    border-bottom: solid 15px transparent;
+//    border-right: solid 15px transparent;
+//    border-left: solid 15px $privateBlue;
+//    border-top: solid 15px $privateBlue;
+//    content: ''
+//}
 
 // Force accordions open for content editing purposes
 //.collapse {
