Tidy up of SVGs and images. robots.txt

--- a/resources/sass/_global.scss
+++ b/resources/sass/_global.scss
@@ -920,12 +920,12 @@ h6 {
     animation-iteration-count: 2;
 }
 
-#search_form {
-    .dropdown-menu {
-        width: 100%;
-        transform: none;
-    }
-}
+//#search_form {
+//    .dropdown-menu {
+//        width: 100%;
+//        transform: none;
+//    }
+//}
 
 .home-page {
     #submit_search {
