btn-compare hover fix

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -24,6 +24,7 @@ $border-radius: 3px;
 // 2020 new brand colours. Old turquoise = #00cecd
 // Primary colours
 $brand-primary-1: #037098; // trunkie
+$trunkie: $brand-primary-1;
 $brand-primary-2: #3e92cc; // sky blue
 $brand-primary-3: #00707c; // greeny blue
 $brand-primary-4: #18435a; // navy ish blue
