--- a/resources/sass/pages/_snapResultsPage.scss
+++ b/resources/sass/pages/_snapResultsPage.scss
@@ -299,16 +299,16 @@
         display: flex !important;
     }
 
-    .btn-enquire svg,
-    .btn-enquire-private-hospital svg {
-        position: static;
-        top: 0;
-        transform: translateY(0);
-        left: 0px;
-        width: 20px;
-        height: 20px;
-        margin-right: 8px !important;
-    }
+    //.btn-enquire svg,
+    //.btn-enquire-private-hospital svg {
+    //    position: static;
+    //    top: 0;
+    //    transform: translateY(0);
+    //    left: 0px;
+    //    width: 20px;
+    //    height: 20px;
+    //    margin-right: 8px !important;
+    //}
 
     .result-item .btn-compare svg {
         content: "";
